Apparently works-for-me is a crappy excuse.

--- a/emailops-build/roles/build-zimbra/tasks/ldap/multimaster.yml
+++ b/emailops-build/roles/build-zimbra/tasks/ldap/multimaster.yml
@@ -12,7 +12,7 @@
   become: yes
   become_user: zimbra
   become_method: sudo
-  when: is_multimaster|bool
+  when: is_multimaster|bool and promote|bool
 
 ##
 ## this needs to be done on EVERY host
