--- a/emailops-build/roles/build-zimbra/tasks/maildrop/scality.yml
+++ b/emailops-build/roles/build-zimbra/tasks/maildrop/scality.yml
@@ -32,12 +32,12 @@
 ## Determine if patch is necessary and apply as required
 ##
 - name: (POSTINSTALL) Determine if Scality patching is required
-  command: "grep volume_id {{ install_dir }}/db/create_database.sql | grep -i \"varchar(40)\" | wc -l"
+  shell: "grep volume_id {{ install_dir }}/db/create_database.sql | grep -i \"varchar(40)\" | wc -l"
   register: patch_count
   when: use_scality|bool
 
 - name: (POSTINSTALL) Apply patch as necessary
-  shell: "cd ${INSTALL_ROOT}/db && patch -b -p0 < /usr/share/doc/{{ scality_version.sysout }}/create_database.sql.patch"
+  shell: "cd {{ install_dir }}/db && patch -b -p0 < /usr/share/doc/{{ scality_version.sysout }}/create_database.sql.patch"
   when: patch_count == 0 and use_scality|bool
 
 - name: (POSTINSTALL) List modifiable tables
@@ -64,17 +64,26 @@
   when: zimbra_major_version == 8 and use_scality|bool
 
 - name: (POSTINSTALL) Configuring Zimbra for Scality use (server config)
-  command: "{{ install_dir }}/bin/zmprov ms {{ hostvars['{{ inventory_hostname }}'] }} zimbraMessageCacheSize 10000 zimbraMailFileDecommandorCacheSize 20000 -zimbraBackupSkipBlobs TRUE
-    -zimbraBackupSkipBlobs FALSE -zimbraBackupSkipHsmBlobs TRUE -zimbraBackupSkipHsmBlobs FALSE -zimbraMailboxMoveSkipBlobs TRUE -zimbraMailboxMoveSkipBlobs FALSE -zimbraMailboxMoveSkipHsmBlobs TRUE
-    -zimbraMailboxMoveSkipHsmBlobs FALSE"
+  command: "{{ install_dir }}/bin/zmprov ms {{ hostvars[inventory_hostname]['ansible_fqdn'] }} zimbraMessageCacheSize 10000 zimbraMailFileDescriptorCacheSize 20000
+    -zimbraBackupSkipBlobs TRUE -zimbraBackupSkipBlobs FALSE -zimbraBackupSkipHsmBlobs TRUE -zimbraBackupSkipHsmBlobs FALSE -zimbraMailboxMoveSkipBlobs TRUE
+    -zimbraMailboxMoveSkipBlobs FALSE -zimbraMailboxMoveSkipHsmBlobs TRUE -zimbraMailboxMoveSkipHsmBlobs FALSE"
   become: yes
   become_user: zimbra
   become_method: sudo
   when: zimbra_major_version == 8 and use_scality|bool
 
 - name: (POSTINSTALL) Configuring Zimbra for Scality use (global config)
-  command: "{{ install_dir }}/bin/zmprov mcf zimbraBackupSkipBlobs TRUE zimbraBackupSkipHsmBlobs TRUE zimbraMailboxMoveSkipBlobs TRUE zimbraMailboxMoveSkipHsmBlobs
-    zimbraMailEmptyFolderBatchSize 100 zimbraMailPurgeBatchSize 100"
+  command: "{{ install_dir }}/bin/zmprov mcf zimbraBackupSkipBlobs TRUE zimbraBackupSkipHsmBlobs TRUE zimbraMailboxMoveSkipBlobs TRUE
+    zimbraMailboxMoveSkipHsmBlobs TRUE zimbraMailEmptyFolderBatchSize 100 zimbraMailPurgeBatchSize 100"
+  become: yes
+  become_user: zimbra
+  become_method: sudo
+  when: use_scality|bool
+
+- name: (POSTINSTALL) Configuring Zimbra for Scality use (global config)
+  command: "{{ install_dir }}/bin/zmprov ms {{ hostvars[inventory_hostname]['ansible_fqdn'] }} -zimbraBackupSkipBlobs TRUE -zimbraBackupSkipBlobs FALSE
+    -zimbraBackupSkipHsmBlobs TRUE -zimbraBackupSkipHsmBlobs FALSE -zimbraMailboxMoveSkipBlobs TRUE -zimbraMailboxMoveSkipBlobs FALSE
+    -zimbraMailboxMoveSkipHsmBlobs TRUE -zimbraMailboxMoveSkipHsmBlobs FALSE"
   become: yes
   become_user: zimbra
   become_method: sudo
