--- a/emailops-build/roles/build-zimbra/vars/main.yml
+++ b/emailops-build/roles/build-zimbra/vars/main.yml
@@ -29,7 +29,17 @@ install_dir: /opt/zimbra
 run_zmfixperms_extended: TRUE
 pkg_version: 8.0.7_GA_6021.RHEL6_64-20140408123937
 disable_fsck: FALSE
+install_synacor_skins_zimlets: TRUE
+
+##
+## Generic JVM arguments
 mailboxd_java_options: "-Djava.awt.headless=true -XX:+UseConcMarkSweepGC -XX:PermSize=128m -XX:MaxPermSize=350m -XX:SoftRefLRUPolicyMSPerMB=1 -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCApplicationStoppedTime -XX:-OmitStackTraceInFastThrow -XX:+UseParNewGC -XX:NewRatio=2 -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/opt/zimbra/store/log -XX:ErrorFile=/opt/zimbra/log/hs_err_pid%p.log"
+new_java_options: "-XX:+ScavengeBeforeFullGC -XX:+UseGCOverheadLimit -XX:-UseParallelGC -XX:-UseParallelOldGC -XX:+AggressiveOpts -XX:+UseLargePages -XX:+UseStringCache -XX:+UseCompressedStrings -XX:+OptimizeStringConcat"
+
+##
+## JMX
+##
+jmx_java_options: "-Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.password.file=/usr/lib/jvm/jre/lib/management/jmxremote.password -Dcom.sun.management.jmxremote.port=9121"
 
 ##
 ## version info
@@ -51,3 +61,5 @@ smtp_host: "mailrelay.{{ client_name }}.{{ datacenter }}.synacor.com"
 smtp_source:
 smtp_dest:
 email_dest: khuntly@synacor.com
+
+default_account_settings: "zimbraMailHost {{ hostvars[inventory_hostname]['ansible_fqdn'] }} zimbraPrefGroupMailBy message zimbraPrefComposeFormat html"
