--- a/emailops-build/ansible.cfg
+++ b/emailops-build/ansible.cfg
@@ -6,14 +6,14 @@
 action_plugins                  = /usr/lib/python2.7/site-packages/ansible/runner/action_plugins
 ansible_connection              = ssh
 ansible_managed                 = Ansible managed: {file} modified on %Y-%m-%d %H:%M:%S by {uid} on {host}
-ask_pass                        = False ## This assumes keys are in use
-bin_ansible_callbacks           = True
+ask_pass                        = FALSE ## This assumes keys are in use
+bin_ansible_callbacks           = TRUE
 callback_plugins                = /usr/lib/python2.7/site-packages/ansible/runner/callback_plugins
-command_warnings                = True
+command_warnings                = TRUE
 connection_plugins              = /usr/lib/python2.7/site-packages/ansible/runner/connection_plugins
-deprecation_warnings            = True
-display_skipped_hosts           = True
-error_on_undefined_vars         = True
+deprecation_warnings            = TRUE
+display_skipped_hosts           = TRUE
+error_on_undefined_vars         = TRUE
 filter_plugins                  = /usr/lib/python2.7/site-packages/ansible/runner/filter_plugins
 forks                           = 50
 gathering                       = smart
@@ -25,21 +25,21 @@ module_name                     = shell
 pattern                         = *
 poll_interval                   = 15
 remote_user                     = khuntly
-system_warnings                 = True
+system_warnings                 = TRUE
 timeout                         = 10
 vars_plugins                    = /usr/lib/python2.7/site-packages/ansible/runner/vars_plugins
 #fact_caching                    = redis
 
 [privilege_escalation]
-become                          = True
+become                          = TRUE
 become_method                   = sudo
 become_user                     = root
-become_ask_pass                 = True
+become_ask_pass                 = TRUE
 
 [ssh_connection]
 ssh_args                        = -o ControlMaster=auto -o ControlPersist=60s -F /home/khuntly/.ssh/dev/config.d/01-md
 control_path                    = %(directory)s/ansible-ssh-%%h-%%p-%%r
-scp_if_ssh                      = True
+scp_if_ssh                      = FALSE
 
 [accelerate]
 accelerate_port                 = 5099
