--- a/distributeProfile/roles/installProfile/tasks/checkout.yml
+++ b/distributeProfile/roles/installProfile/tasks/checkout.yml
@@ -6,10 +6,11 @@
 - name: check out current repository
   git:
     clone=yes
-    dest="{{ ansible_env.HOME }}/.dotfiles"
+    dest="/home/khuntly/.dotfiles"
     key_file="{{ ssh_key }}"
     recursive=yes
     repo="{{ dotfiles_repo }}"
     track_submodules=yes
     update=yes
     version="{{ version }}"
+  delegate_to: 127.0.0.1
