--- a/emailops-build/roles/build-nginx/tasks/run-installation.yml
+++ b/emailops-build/roles/build-nginx/tasks/run-installation.yml
@@ -6,8 +6,16 @@
 ##
 ## Run installation steps
 ##
-- name: Install nginx
+- name: (INSTALL) Install selected packages
   yum:
-    name: "nginx-{{ pkg_version }}.{{ hostvars[inventory_hostname]['ansible_architecture'] }}"
+    name: "{{ item.name }}-{{ item.version }}"
     state: present
+  with_items: "{{ packages|default([]) }}"
 
+- name: Notify puppet
+  command: puppet agent -t
+  ignore_errors: yes
+
+##
+## INSTALLATION COMPLETE
+##
