--- a/emailops-build/site.yml
+++ b/emailops-build/site.yml
@@ -11,6 +11,7 @@
     is_pop: false
   roles:
     - build-zimbra
+    - jira-tasks
   tags:
     - build-ldap
 
@@ -22,6 +23,7 @@
     is_pop: false
   roles:
     - build-zimbra
+    - jira-tasks
   tags:
     - build-maildrop
 
@@ -36,6 +38,7 @@
   gather_facts: true
   roles:
     - build-ecelerity
+    - jira-tasks
   tags:
     - build-smtp
 
@@ -43,6 +46,7 @@
   gather_facts: true
   roles:
     - build-ecelerity
+    - jira-tasks
   tags:
     - build-mx
 
@@ -55,5 +59,6 @@
   roles:
     - build-zimbra
     - build-nginx
+    - jira-tasks
   tags:
     - build-nginx
