One more time, but with feeling.

--- a/distributeProfile/ansible.cfg
+++ b/distributeProfile/ansible.cfg
@@ -38,7 +38,7 @@ become_user                     = root
 become_ask_pass                 = FALSE
 
 [ssh_connection]
-ssh_args                        = -F /home/khuntly/.ssh/cmh/config.d/01-md
+ssh_args                        = -o ControlMaster=auto -o ControlPersist=60s
 control_path                    = %(directory)s/ansible-ssh-%%h-%%p-%%r
 scp_if_ssh                      = FALSE
 
