--- a/distributeProfile/roles/installProfile/tasks/main.yml
+++ b/distributeProfile/roles/installProfile/tasks/main.yml
@@ -14,3 +14,9 @@
 
 - name: Set up configuration files for Java apps
   include: update-config.yml
+
+- name: Remove checkout directory on completion
+  file:
+    path="{{ checkout_to }}"
+    state=absent
+  delegate_to: 127.0.0.1
